# eyes2

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md
eyes2/: Cargo.toml
eyes2-lib/: Cargo.toml
eyes2-lib/src/: lib.rs  settings.rs  store.rs  utils.rs
eyes2-lib/src/entity/: creature.rs  entity.rs  genotype.rs  mod.rs  update.rs  vision.rs
eyes2-lib/src/entity/creature/: code.rs
eyes2-lib/src/entity/genotype/: genotype.rs  giles.rs  mod.rs  random.rs
eyes2-lib/src/entity/genotype/genotypes/: genotypes.rs  giles.rs  looker.rs  mod.rs  noop.rs  random.rs
eyes2-lib/src/entity/random/: mod.rs
eyes2-lib/src/world/: grid.rs  mod.rs  store.rs  types.rs  world.rs  world_test.rs
eyes2-lib/src/world/tests/: mod.rs
eyes2/src/: gui.rs  main.rs
src/: code.rs  creature.rs  entity.rs  grass.rs  gui.rs  gui2.rs  lib.rs  main.rs  settings.rs  tui.rs  types.rs  utils.rs  world.rs
src/entity/: creature.rs  entity.rs  grass.rs  mod.rs
src/entity/creature/: code.rs
src/tests/: world.rs
src/world/: api.rs  entity_map.rs  grid.rs  mod.rs  private.rs  tests.rs  thing.rs  types.rs  world.rs  world_api.rs
