[package]
name = "eyes2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
direction = { version = "0.18.1"}
eyes2-lib = {path = "../eyes2-lib"}
num-format = "0.4.4"
pancurses = "0.17.0"
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.25"